Much more complete. Still skeletal, but most (if not all) links are live.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<h2><a href="/research.html">Research Summary:</a></h2>
+
+<p>
+  The major goal of the project is to discover how natural language discourse reflects social dynamics in English, Arabic, Chinese, and other languages. We develop computational models in our analyses of a large and diverse collection of documents from these languages and associated cultures (such as political speeches, letters, emails, chat, tweets). Our expectation is that these computer analyses of language/discourse can predict socially significant states, such as leadership, status, familiarity of group members, personality, social cohesion, deception, and social disequilibrium. This research is expected not only to advance the social sciences but also to address key national security questions that require the processing of large amounts of textual communication.
+</p>
+
 <h4>Primary Researchers</h4>
 
 <ul>
@@ -13,11 +19,11 @@ layout: default
 <h4>Collaborators</h4>
 
 <ul>
-  <li><a href="">Dr. Cindy Chung, Postdoctoral Researcher, UT Austin</a></li>
-  <li><a href="">Daniel Velleman, Graduate Research Assistant, UT Austin</a></li>
-  <li><a href="">Justin Cope, Graduate Research Assistant, UT Austin</a></li>
-  <li><a href="">Jenna Baddely, Graduate Research Assistant, UT Austin</a></li>
-  <li><a href="">Ewa Kacewicz, Graduate Research Assistant, UT Austin</a></li>
-  <li><a href="">Yla Tausczik, Graduate Research Assistant, UT Austin</a></li>
+  <li><a href="/people/cindy_chung.html">Dr. Cindy Chung, Postdoctoral Researcher, UT Austin</a></li>
+  <li><a href="http://www.utexas.edu/cola/depts/linguistics/graduate_programs/gradstudents/profile.php?id=dv4442">Daniel Velleman, Graduate Research Assistant, UT Austin</a></li>
+  <li><a href="http://www.utexas.edu/cola/depts/linguistics/graduate_programs/gradstudents/profile.php?id=copejl">Justin Cope, Graduate Research Assistant, UT Austin</a></li>
+  <li><a href="http://homepage.psy.utexas.edu/homepage/students/Baddeley/">Jenna Baddely, Graduate Research Assistant, UT Austin</a></li>
+  <li><a href="http://homepage.psy.utexas.edu/homepage/students/kacewicz/">Ewa Kacewicz, Graduate Research Assistant, UT Austin</a></li>
+  <li><a href="http://homepage.psy.utexas.edu/homepage/students/Tausczik/Yla/index.html">Yla Tausczik, Graduate Research Assistant, UT Austin</a></li>
 </ul>
 
