--- a/people/arthur_graesser.html
+++ b/people/arthur_graesser.html
@@ -3,4 +3,29 @@ layout: post
 title: Arthur C. Graesser
 ---
 
-<a href="https://sites.google.com/site/graesserart/home">Homepage</a>
+<h3>Quick links</h3>
+
+<ul>
+  <li><a href="https://sites.google.com/site/graesserart/home">Homepage</a></li>
+  <li>Email: <a href="mailto:a-graesser@memphis.edu">a-graesser@memphis.edu</a></li>
+</ul>
+
+<h3>An extract from <a href="https://sites.google.com/site/graesserart/projects/language-across-cultures">Arthur Graesser's page</a></h3>
+
+<h4>Overview:</h4>
+
+<p>This project investigates the language and discourse patterns of English and Arabic texts using computerized text analysis tools. Specifically, the researchers are interested in analyzing discourse patterns in various corpora such as newspapers, speeches, and conversations to elucidate the leadership style, personality, and social status of leaders. In addition to English and Arabic, analyses will be performed on Korean, Chinese, and other languages. We will use computational tools that automatically analyze texts on hundreds of measures of language and text cohesion (using Coh-Metrix), including word characteristics, syntax complexity, lexical diversity, readability, connectives, latent semantic analysis, co-referential cohesion, mental model dimensions, and genre.</p>
+
+<ul>
+  <li><strong>PI:</strong> James Pennebaker (University of Texas at Austin)</li>
+  <li><strong>Co-PIs:</strong> Art Graesser, Danielle McNamara</li>
+  <li><strong>Grant Name:</strong> Modeling discourse and social dynamics in authoritarian regimes</li>
+  <li><strong>Grant Number:</strong> NSF 0904909</li>
+  <li><strong>Funding Agency:</strong> National Science Foundation </li>
+  <li><strong>Dates:</strong> 2009-2012</li>
+  <li><strong>Amount:</strong> $582,000 (Memphis allocation)</li>
+</ul>
+
+<h4>Abstract:</h4>
+
+<p>The major goal of the project is to define and compare the ways discourse in natural language reflects social dynamics in English, Arabic, Chinese, and other languages through the analysis of a wide range of documents from these languages and associated cultures. These analyses are automated via the computer facilities we have developed, such as Linguistic Inquiry and Word Count (Pennebaker, Booth, & Francis, 2007) and Coh-Metrix (Graesser, McNamara, Louwerse, & Cai, 2004; Graesser & McNamara, 2011; Graesser, McNamara, & Kulikowich, 2011).  Our expectation is that these analyses of language and discourse can predict socially significant states such as leadership, status, group dynamics, familiarity of group members, social cohesion, deception, and misinformation. This research is expected not only to advance the social sciences but also answer questions that require the processing of large amounts of textual communication.</p>
