--- a/people/cindy_chung.html
+++ b/people/cindy_chung.html
@@ -3,6 +3,14 @@ layout: post
 title: Cindy K. Chung
 ---
 
+<h3>Quick links</h3>
+
+<ul>
+  <li><a href="http://homepage.psy.utexas.edu/homepage/students/Chung/">Homepage</a></li>
+  <li>Email: <a href="mailto:cindyk.chung@mail.utexas.edu">cindyk.chung@mail.utexas.edu</a></li>
+</ul>
+
+
 <h3>Outreach</h3>
 
 <ul>
