--- a/people/james_pennebaker.html
+++ b/people/james_pennebaker.html
@@ -3,6 +3,13 @@ layout: post
 title: James Pennebaker
 ---
 
+<h3>Quick links</h3>
+
+<ul>
+  <li><a href="http://www.psy.utexas.edu/Pennebaker">Homepage</a></li>
+  <li>Email: <a href="mailto:Pennebaker@mail.utexas.edu">Pennebaker@mail.utexas.edu</a></li>
+</ul>
+
 <h3>Talks</h3>
 
 <ul>
