--- a/people/joseph_frazee.html
+++ b/people/joseph_frazee.html
@@ -1,7 +1,17 @@
 ---
 layout: post
+title: Joseph Frazee
 ---
 
-<h3>Joseph Frazee</h3>
+<h3>Quick links</h3>
 
-Frazee has been developing computational methods for analysis of large textual data sets.
+<ul>
+  <li><a href="http://comp.ling.utexas.edu/jfrazee/">Homepage</a></li>
+  <li>Email: <a href="mailto:joseph.frazee@gmail.com">joseph.frazee@gmail.com</a></li>
+</ul>
+
+<h3>Role</h3>
+
+<p>
+  Frazee has been developing computational methods for analysis of large textual data sets.
+</p>
