--- a/people/david_beaver.html
+++ b/people/david_beaver.html
@@ -3,6 +3,13 @@ layout: post
 title: David Beaver
 ---
 
+<h3>Quick links</h3>
+
+<ul>
+  <li><a href="https://webspace.utexas.edu/dib97/">Homepage</a></li>
+  <li>Email: <a href="mailto:dib@mail.utexas.edu">dib@mail.utexas.edu</a></li>
+</ul>
+
 <h3>Outreach</h3>
 
 <ul>
