--- a/publications.html
+++ b/publications.html
@@ -1,44 +1,40 @@
 ---
 layout: post
+title: Publications
 ---
 
+<h3>A list of all publications related to the Minerva project</h3>
 
 <ul>
-  <li>Beaver, D., and Velleman, D., "The communicative significance of primary and secondary accents", Lingua, p. , vol. , (2011). Accepted.</li>
-
+  <li>Beaver, D., and D. Velleman (2011), The communicative significance of primary and secondary accent. Lingua, doi:10.1016/j.lingua.2011.04.004.</li>
   <li>Baddeley, J. L., & Pennebaker, J. W., "An expressive writing intervention for military couples reuniting after a deployment", Journal of Traumatic Stress, p. , vol. , (2010). Submitted.</li>
-
   <li>Ireland, M. E. and Pennebaker, J. W., "Language Style Matching in Writing: Synchrony in Class Assignments, Correspondence, and Poe", Journal of Personality and Social Psychology, p. , vol. , (2010). Accepted.</li>
-
   <li>Ireland, M. E. & Pennebaker, J. W., "Do authors have an ear for the opposite sex? Sex differences in the genderization of fictional characters.", Psychological Science, p. , vol. , (2010). Submitted.</li>
-
   <li>Ireland, M. E., Slatcher, R. B., Eastwick, P. W., Scissors, L. E., Finkel, E. J., & Pennebaker, J. W., "Language style matching predicts relationship formation and stability", Psychological Science, p. , vol. , (2010). Accepted.</li>
-
   <li>Ramirez-Esparza, N. and Chung, C. K., Sierra-Otero, Gabriele, Pennebaker, J. W., "Cross-cultural constructions of self: American and Mexican college students", Journal of Cross-Cultural Psychology, p. , vol. , (2010). Accepted.</li>
-
   <li>Seih, Yitai and Chung, C. K., Pennebaker, J. W., "Experimental manipulations of perspective taking and perspective switching", Cognition and Emotion, p. , vol. , (2010). Accepted.</li>
-
-  <li>Hancock, J.T., Beaver, D.I., Chung, C.K., Frazee, J., Pennebaker, J.W., Graesser, A., & Cai, Z., "Social Language Processing: A Framework for Analyzing the Communication of Terrorists and Authoritarian Regimes", Behavioral Sciences of Terrorism and Political Aggression, p. 108, vol. 2, (2010). Published.</li>
-
-  <li>Ireland, M. E., Slatcher, R. B., Eastwick, P. W., Scissors, L. E., Finkel, E. J., & Pennebaker, J. W., "Language style matching predicts relationship formation and stability", Psychological Science, p. , vol. , (2011). Published.</li>
-
-  <li>Baddeley, J., Daniel, G., & Pennebaker, J.W., "How Henry Hellyer's language use foretold his suicide.", Journal of Crisis Intervention and Suicide Prevention, p. , vol. , (2011). Accepted.</li>
-
-  <li>Ramirez-Esparza, N., Chung, K. C., Sierra-Otero, G., & Pennebaker J. W., "Cross-cultural constructions of self: American and Mexican College Students.", Journal of Cross-Cultural Psychology., p. , vol. , (2011). Accepted.</li>
-
-  <li>Seih, Y., Chung, C.K., & Pennebaker, J.W., "Experimental manipulations of perspective taking and perspective switching in expressive writing.", Cognition & Emotion, p. , vol. , (2011). Published.</li>
-
-  <li>Pennebaker, J.W., & Ireland, M.E., "Using literature to understand authors: The case for computerized text analysis.", Scientific Study of Literature, p. 34, vol. 1, (2011). Published.</li>
-
-  <li>Tausczik, Y. R., & Pennebaker, J. W., "Predicting the quality of online mathematics contributions from users' reputations.", Proceedings of the 2011 Conference for the Computer Human Interaction Society, p. , vol. , (2011). Published.</li>
-
+  <li>Graesser, A.C., & McNamara, D.S. (2011). Computational analyses of multilevel discourse comprehension. Topics in Cognitive Science, 3, 371-398.</li>
+  <li>Graesser, A.C., McNamara, D.S., & Kulikowich, J. (2011). Coh-Metrix: Providing multilevel analyses of text characteristics. Educational Researcher, 40, 223-234.</li>
+  <li>Hancock, J.T., Beaver, D.I., Chung, C.K., Frazee, J., Pennebaker, J.W., Graesser, A., & Cai, Z. (2010). Social language processing: A framework for analyzing the communication of terrorists and authoritarian regimes. Behavioral Sciences of Terrorism and Political Aggression, 2, 108-132.</li>
   <li>Ireland, M.E., & Pennebaker, J.W., "Language style matching in writing: Synchrony in essays, correspondence, and poetry.", Journal of Personality and Social Psychology, p. 549, vol. 99, (2010). Published.</li>
-
-  <li>Baddeley, J. L., & Pahl., S., "The family reunion: Soldiers' and spouses' experiences of reuniting after deployment.", Journal of Family Psychology, p. , vol. , (2011). Submitted.</li>
-
-  <li>Baddeley, J. L., & Pennebaker, J. W., "The Sounds of Depression: The Everyday Social Behavior and Language Use Associated with a Major Depressive Episode.", Journal of Abnormal Psychology., p. , vol. , (2011). Submitted.</li>
-
+  <li>Ireland, M. E., Slatcher, R. B., Eastwick, P. W., Scissors, L. E., Finkel, E. J., & Pennebaker, J. W., "Language style matching predicts relationship formation and stability", Psychological Science, p. , vol. , (2011). Published.</li>
   <li>Ireland, M. E. & Pennebaker, J. W., "Men imitate life, women underestimate it: Sex differences in scriptwriters' portrayal of naturalistic dialog", Journal of Personality and Social Psychology, p. , vol. , (2011). Submitted.</li>
-
+  <li>Baddeley, J., Daniel, G., & Pennebaker, J.W., "How Henry Hellyer's language use foretold his suicide.", Journal of Crisis Intervention and Suicide Prevention, p. , vol. , (2011). Accepted.</li>
+  <li>Ramirez-Esparza, N., Chung, K. C., Sierra-Otero, G., & Pennebaker J. W., "Cross-cultural constructions of self: American and Mexican College Students.", Journal of Cross-Cultural Psychology., p. , vol. , (2011). Accepted.</li>
+  <li>Seih, Y., Chung, C.K., & Pennebaker, J.W., "Experimental manipulations of perspective taking and perspective switching in expressive writing.", Cognition & Emotion, p. , vol. , (2011). Published.</li>
+  <li>Shala, L., Rus, V., & Graesser, A. C. (2010). Automated speech act classification in Arabic. Subjetividad y Procesos Cognitivos, 14, 284-292.</li>
+  <li>Pennebaker, J.W., The secret life of pronouns: What our words say about us, (2011). Bloomsbury Publishers.</li>
+  <li>Pennebaker, J.W., & Ireland, M.E., "Using literature to understand authors: The case for computerized text analysis.", Scientific Study of Literature, p. 34, vol. 1, (2011). Published.</li>
+  <li>Tausczik, Y. R., & Pennebaker, J. W., "Predicting the quality of online mathematics contributions from users' reputations.", Proceedings of the 2011 Conference for the Computer Human Interaction Society, p. , vol. , (2011). Published.</li>
+  <li>Baddeley, J. L., & Pahl., S., "The family reunion: Soldiers' and spouses' experiences of reuniting after deployment.", Journal of Family Psychology, p. , vol. , (2011). Submitted.</li>
+  <li>Baddeley, J. L., & Pennebaker, J. W., "The Sounds of Depression: The Everyday Social Behavior and Language Use Associated with a Major Depressive Episode.", Journal of Abnormal Psychology., p. , vol. , (2011). Submitted.</li>
   <li>Tausczik, Y. R., Faase, K., Pennebaker, J. W., & Petrie, K. J., "Changes in Anxiety and Information Seeking Following H1N1 Outbreak", Health Communication, p. , vol. , (2011). Accepted,
 </ul>
+
+ 
+ 
+
+
+
+
+
