Funding info, deploy script, better favicon.g

--- a/index.html
+++ b/index.html
@@ -27,3 +27,9 @@ layout: default
   <li><a href="http://homepage.psy.utexas.edu/homepage/students/Tausczik/Yla/index.html">Yla Tausczik, Graduate Research Assistant, UT Austin</a></li>
 </ul>
 
+<h4>Funding</h4>
+
+<ul>
+  <li>NSF Minerva Project: <em>Modeling Discourse and Social Dynamics in
+Authoritarian Regimes, NSF 0904913 at the University of Texas at Austin</em></li>
+</ul>
