--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ layout: default
   <li><a href="http://homepage.psy.utexas.edu/homepage/students/Tausczik/Yla/index.html">Yla Tausczik, Graduate Research Assistant, UT Austin</a></li>
 </ul>
 
+<h4>Latest report</h4>
+
+<ul>
+  <li><a href="https://webspace.utexas.edu/dib97/libya-report-10-30-11.pdf">Evolution of Sentiment in the Libyan Revolution</a></li>
+</ul>
+
+
 <h4>Funding</h4>
 
 <ul>
