Trim down extras, add tools.html and screenshots

--- a/people/david_beaver.html
+++ b/people/david_beaver.html
@@ -7,7 +7,7 @@ title: David Beaver
 
 <ul>
   <li><a href="https://webspace.utexas.edu/dib97/">Homepage</a></li>
-  <li>Email: <a href="mailto:dib@mail.utexas.edu">dib@mail.utexas.edu</a></li>
+  <li>Email: <a href="mailto:dib@utexas.edu">dib@utexas.edu</a></li>
 </ul>
 
 <h3>Outreach</h3>
