Fix broken link to report

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <h4>Latest report</h4>
 
 <ul>
-  <li><a href="https://webspace.utexas.edu/dib97/libya-report-10-30-11.pdf">Evolution of Sentiment in the Libyan Revolution</a></li>
+  <li><a href="/documents/libya-report-10-30-11.pdf">Evolution of Sentiment in the Libyan Revolution</a></li>
 </ul>
 
 
